# spot_demo

./: .gitignore  R.py  README.md  Reset.py  check_npu.py  cls_rmit_spot.py  cls_rmit_spot_core.py  cls_rmit_spot_detector.py  cls_rmit_spot_detector_ov.py  cls_rmit_spot_nav.py  cls_rmit_spot_stream.py  cls_rmit_spot_tracker.py  cls_spot_agent.py  cls_spot_agent_test.py  cls_yolo.py  cls_yolo_2.py  demo_dance.py  demo_grab.py  demo_walk.py  get_model.py  graph_view.py  move.py  nav_test_1.py  plastic.yaml  plastic_cpu.yaml  pyproject.toml  refine.py  spot_go_home.py  spot_guard.py  spot_guard_back_repeat.py  spot_guard_detect_only.py  spot_guard_first.py  spot_guard_front.py  spot_guard_front_repeat.py  spot_patrol_only.py  spot_reset.py  t3.py  t42.py  t43.py  t44.py  (+13 more)
Archive/: bd_graph_view.py  bd_record.py  check_map.py  cls_rmit_spot_web.py  cls_spot.py  cls_spot_demo.py  cls_yolo.py  cls_yolo_2.py  convert.py  debug.py  demo.py  demo_walk.py  t1.py  t2.py  t44.py  t45.py  test.py  test4.py  test5.py  test_224_1.py  test_224_2.py
Maps/: check_map.py
live_map_data copy/: cloud_1770010950187353511.ply  cloud_1770010951159992487.ply  cloud_1770010952263965216.ply  cloud_1770010953207601916.ply  cloud_1770010954388917035.ply  cloud_1770010955240190020.ply  cloud_1770010956186431826.ply  cloud_1770010957238181454.ply  cloud_1770010958115304166.ply  cloud_1770010959254896442.ply  cloud_1770010960542596279.ply  cloud_1770010961387315198.ply  cloud_1770010962231984298.ply  cloud_1770010963315173244.ply  cloud_1770010964226768266.ply  cloud_1770010965212156693.ply  (+78 more)
(+1408 files in other folders)
